--- a/WebSite/Content/bootstrap.css
+++ b/WebSite/Content/bootstrap.css
@@ -1720,7 +1720,7 @@ input[type="number"]::-webkit-inner-spin-button {
   display: block;
   width: 100%;
   height: 34px;
-  padding: 6px 12px;
+  /*padding: 6px 12px;*/
   font-size: 14px;
   line-height: 1.428571429;
   color: #555555;
@@ -1999,7 +1999,7 @@ textarea.input-lg {
 
 .btn {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 3px 8px;
   margin-bottom: 0;
   font-size: 14px;
   font-weight: normal;
